# kbd

./: .clang-format  .gear-rules  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CHANGES  CNAME  CONTRIBUTING.md  COPYING  CREDITS  ChangeLog  Makefile  Makefile.am  Makefile.common  Makefile.in  README  README.md  autogen.sh  config.h.in  configure  configure.ac  index.html  sample.rc
data/: Makefile  Makefile.am  Makefile.in  compress.sh
data/consolefonts/: 161.cp  163.cp  165.cp  737.cp  928.cp  Agafari-12.psfu  Agafari-14.psfu  Agafari-16.psfu  Cyr_a8x14.psfu  Cyr_a8x16.psfu  Cyr_a8x8.psfu  Goha-12.psfu  Goha-14.psfu  Goha-16.psfu  GohaClassic-12.psfu  GohaClassic-14.psfu  GohaClassic-16.psfu  Lat2-Terminus16.psfu  LatArCyrHeb-08.psfu  LatArCyrHeb-14.psfu  LatArCyrHeb-16+.psfu  LatArCyrHeb-16.psfu  LatArCyrHeb-19.psfu  LatCyrHebKa-16_GIA.psfu  LatGrkCyr-12x22.psfu  LatGrkCyr-8x16.psfu  LatKaCyrHeb-14.psfu  Mik_8x16  README.Ethiopic  README.Greek  README.LatGrkCyr  README.Sun  README.eurlatgr  README.eurlatgr.mappings  README.lat7  UniCyrExt_8x16.psf  UniCyr_8x14.psf  UniCyr_8x16.psf  UniCyr_8x8.psf  aply16.psf  (+164 more)
data/consoletrans/: 8859-7_to_uni.trans  baltic.trans  cp850_to_iso01.trans  null  space  trivial
data/keymaps/: README
data/partialfonts/: 8859-1.a0-ff.08  8859-1.a0-ff.14  8859-1.a0-ff.16  8859-10.a0-ff.08  8859-10.a0-ff.14  8859-10.a0-ff.16  8859-2.a0-ff.08  8859-2.a0-ff.14  8859-2.a0-ff.16  8859-3.a0-ff.08  8859-3.a0-ff.14  8859-3.a0-ff.16  8859-4.a0-ff.08  8859-4.a0-ff.14  8859-4.a0-ff.16  8859-5.a0-ff.08  8859-5.a0-ff.14  8859-5.a0-ff.16  8859-6.a0-ff.08  8859-6.a0-ff.14  8859-6.a0-ff.16  8859-7.a0-ff.08  8859-7.a0-ff.14  8859-7.a0-ff.16  8859-8.a0-ff.08  8859-8.a0-ff.14  8859-8.a0-ff.16  8859-9.a0-ff.08  8859-9.a0-ff.14  8859-9.a0-ff.16  ascii.20-7f.08  ascii.20-7f.14  ascii.20-7f.16  cp437.00-1f.08  cp437.00-1f.14  cp437.00-1f.16  none.00-17.08  none.00-17.14  none.00-17.16
data/unimaps/: 8859-7.a0-ff.uni  ECMA144.uni  cp1250.uni  cp437.00-1f.uni  cp437.uni  cp737a.uni  cp737b.uni  cp737c.uni  cp850a.uni  cp850b.uni  cp850z.uni  cp865a.uni  cp866a.uni  cybercafe.uni  cyralt.uni  def.uni  ethiopic.uni  iso01.uni  iso02.uni  iso03.uni  iso04.uni  iso05.uni  iso06.uni  iso07.uni  iso07u.uni  iso08.uni  iso09.uni  iso10.uni  iso15.uni  koi8r.uni  koi8u.uni  lat1.uni  lat1u.uni  lat2u.uni  lat4.uni  lat4u.uni  lat7.uni  lat9u.uni  lat9v.uni  lat9w.uni  (+1 more)
data/xkbtrans/: names
man/man8/: Makefile.am  kbdrate.8  loadunimap.8.in  mapscrn.8.in  setfont.8.in  setkeycodes.8  setvtrgb.8  showconsolefont.8
src/: CHANGELOG  Makefile.am  Makefile.in  README  README.psftable  analyze.c  analyze.l  cad  chvt.c  clrunimap.c  context.c  context.h  cp1250.syms.h  cyrillic.syms.h  deallocvt.c  dumpkeys.c  ethiopic.syms.h  fgconsole.c  findfile.c  findfile.h  getfd.c  getfd.h  getkeycodes.c  getunimap.c  kbd.h  kbd_error.c  kbd_error.h  kbd_mode.c  kbdinfo.c  kbdrate.c  kdfontop.c  kdfontop.h  kdmapop.c  kdmapop.h  kfont.h  klibc_compat.c  klibc_compat.h  koi8.syms.h  ksyms.c  ksyms.h  (+57 more)
src/compat/: linux-kd.h  linux-limits.h
src/include/: array_size.h  kbdfile.h  keymap.h  kfont.h
src/libcommon/: Makefile.am  error.c  getfd.c  libcommon.h  nls.h  version.c  xmalloc.c
src/libfindfile/: Makefile.am  findfile.c
src/libkbdfile/: Makefile.am  contextP.h  elf-note.c  elf-note.h  findfile.c  init.c  kbdfile-bzip2.c  kbdfile-lzma.c  kbdfile-zlib.c  kbdfile-zstd.c  kbdfile.c  kbdfile.h
src/libkeymap/: Makefile.am  analyze.l  array.c  base.c  common.c  contextP.h  diacr.c  dump.c  findfile.c  findfile.h  func.c  kernel.c  keymap.h  keymapP.h  kmap.c  ksyms.c  ksyms.h  libkeymap.pc.in  load.c  loadkeys.c  modifiers.c  modifiers.h  parse.y  parseP.h  parser.y  summary.c  syms.cp1250.h  syms.ethiopic.h  syms.iso8859_15.h  syms.iso8859_5.h  syms.iso8859_7.h  syms.iso8859_8.h  syms.iso8859_9.h  syms.koi8.h  syms.ktyp.h  syms.latin1.h  syms.latin2.h  syms.latin3.h  syms.latin4.h  syms.mazovia.h  (+3 more)
src/libkfont/: Makefile.am  context.c  context.h  contextP.h  dumpfont.c  init.c  kdfontop.c  kdmapop.c  kdmapop.h  kfont-test.c  kfont.h  kfontP.h  libkfont.map  libkfont.pc.in  loadunimap.c  loadunimap.h  mapscrn.c  mapscrn.h  psf.c  psf.h  psffontop.c  psffontop.h  psfxtable.c  setfont.c  unicode.c  unicode.h  utf8.c  utf8.h
src/vlock/: .gitignore  Makefile.am  README.vlock  auth.c  pam.c  pam_auth.h  parse.c  screen.c  username.c  vlock.c  vlock.h  vlock.pamd  vt.c
tests/: Makefile.am  VoidSymbol.map  alt-is-meta.in  alt-is-meta.map  alt-is-meta.output  charset-keymap0.map  check-data-keymaps.sh  check.sh  configure.sh  dumpkeys-bkeymap.in  dumpkeys-fulltable  dumpkeys-fulltable.in  dumpkeys-mktable.in  dumpkeys.defkeymap.c  dumpkeys.full.ruwin_cplk-UTF-8.map  dumpkeys.qwerty-layout.map  e2e-clrunimap.at  e2e-dumpkeys.at  e2e-getunimap.at  e2e-kbd_mode.at  e2e-kbdinfo.at  e2e-loadkeys.at  e2e-loadunimap.at  e2e-memcheck-clrunimap.at  e2e-memcheck-dumpkeys.at  e2e-memcheck-getunimap.at  e2e-memcheck-loadkeys.at  e2e-memcheck-loadunimap.at  e2e-memcheck-setfont.at  e2e-memcheck-setvtrgb.at  e2e-misc-data-keymaps.at  e2e-misc-dumpkeys.at  e2e-psfxtable.at  e2e-setfont.at  e2e-setvtrgb.at  e2e-syscalls-clrunimap.at  e2e-syscalls-getunimap.at  e2e-syscalls-kbdinfo.at  e2e.at  keymap0.map  (+62 more)
tests/ci/: check-dco.sh  create-cloud-image.sh  qemu-install-dependencies.sh  qemu-install-test-dependencies.sh  qemu-run-build-and-tests.sh  qemu-run-tests-from-build.sh  start-qemu-vm.sh  vm-scp.sh  vm-ssh-stdin.sh  vm-ssh.sh
tests/data/: keymap0-summary.txt  keymap7-compose-as-usual.txt
tests/helpers/: Makefile.am  libkeymap-bkeymap.c  libkeymap-dumpkeys.c  libkeymap-mktable.c  libkeymap-showmaps.c
tests/libcommon/: Makefile.am  libcommon-test01.c  libcommon-test02.c  libcommon-test03.c
tests/libkbdfile/: Makefile.am  libkbdfile-test.h  libkbdfile-test01.c  libkbdfile-test02.c  libkbdfile-test03.c  libkbdfile-test04.c  libkbdfile-test05.c  libkbdfile-test06.c  libkbdfile-test07.c  libkbdfile-test08.c  libkbdfile-test09.c  libkbdfile-test10.c  libkbdfile-test11.c  libkbdfile-test12.c  (+4 more)
(+1134 files in other folders)
